move access token

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id="mapid"></div>
+    <script src="access_token.js"></script>
     <script src="script.js"></script>
 </body>
 
