--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
     <style>
-        #mapid { height: 100%; }
+        #mapid {
+            height: 90%;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
 <body>
+    <div>
+        <input type="text" id="txtSearch" />
+        <button onclick="search()">Search</button>
+    </div>
     <div id="mapid"></div>
     <script src="access_token.js"></script>
     <script src="script.js"></script>
