--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             height: 90%;
             margin-top: 10px;
         }
+        #resultsCount {
+            display: inline;
+        }
     </style>
 </head>
 
@@ -21,6 +24,7 @@
     <div>
         <input type="text" id="txtSearch" />
         <button onclick="search()">Search</button>
+        <p id="resultsCount"></p>
     </div>
     <div id="mapid"></div>
     <script src="access_token.js"></script>
